--- a/views/index.haml
+++ b/views/index.haml
@@ -1,32 +1,33 @@
+- is_open = @last_tweet.published_at < Time.now - 1.day
 %html.no-js.wf-karla-n4-active.wf-active
   %head
-    %link{rel: "stylesheet", type:"text/css", href: url("/assets/stylesheets/style.css")}
+    %link{rel: "stylesheet", type:"text/css", href: url("/assets/stylesheets/base.css")}
+    %title= is_open ? "open" : 'closed'
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
   %body.index
     .o-app
-      .header.o-app__header
-        .o-container
-        .o-row
-          .o-col.is-left
-            %a{href: "/", class: "c-brand"}
-              Is El Teide Open?
-          .o-col.is-right
-            %ul.c-list.is-right
-              %li.c-item="lorem"
-              %li.c-item="lorem"
-              %li.c-item="lorem"
+      .header
+        Is El Teide Open?
       .main.o-app__content
-        - if @last_tweet.published_at < Time.now - 1.day
-          %h1 Probably OPEN
+        - if is_open
+          %h2 Probably OPEN
           %p
             = "Last tweet: #{@last_tweet.text}; #{@last_tweet.published_at}"
           %p
-            Better check https://www.volcanoteide.com/en for details
+            Better check
+            %a{href: 'https://www.volcanoteide.com/en'} Volcano Teide
+            for details
         - else
           %h2 CLOSED
-          = "closed - Last tweet: #{@last_tweet.text}; #{@last_tweet.published_at}"
+          = "Last tweet: #{@last_tweet.text}; #{@last_tweet.published_at}"
+
       .footer.o-app__footer
-        %a{href: "http://railslove.com", class: "c-brand"}
-          A Railslove Project    
+        .footer-links
+          %a{href: 'http://www.lascasasdelcaminoreal.com/', class: "c-sponsor"}
+            Presented by: Las Casas del Camino Real
+          %a{href: "http://railslove.com", class: "c-brand"}
+            A Railslove Project
+
   :javascript
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
