--- a/views/index.haml
+++ b/views/index.haml
@@ -23,9 +23,9 @@
 
       .footer.o-app__footer
         .footer-links
-          %a{href: 'http://www.lascasasdelcaminoreal.com/', class: "c-sponsor"}
+          %a{target: '_blank', href: 'http://www.lascasasdelcaminoreal.com/', class: "c-sponsor"}
             Presented by: Las Casas del Camino Real
-          %a{href: "http://railslove.com", class: "c-brand"}
+          %a{target: '_blank', href: "http://railslove.com", class: "c-brand"}
             A Railslove Project
 
   :javascript
