--- a/views/index.haml
+++ b/views/index.haml
@@ -2,25 +2,24 @@
 %html.no-js.wf-karla-n4-active.wf-active
   %head
     %link{rel: "stylesheet", type:"text/css", href: url("/assets/stylesheets/base.css")}
-    %title= is_open ? "open" : 'closed'
+    %title= is_open ? "Is Pico del Teide Cable Car Open? YES it's OPEN!" : "Is Pico del Teide Cable Car Open? NO it's CLOSED!"
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     %meta{charset: "utf-8"}
-    %title{"Is Pico del Teide Cable Car Open?"}
 
     %meta{name:"description", content: "Is Pico del Teide Cable Car Open?"}
     %meta{name:"keywords", content: "pico, del, teide, cable, car, mointain, teneriffe"}
     %meta{name:"author", content: "Jan Kus"}
 
-    %meta{property:"og:title" content:"Is Pico del Teide Cable Car Open?"}
-    %meta{property:"og:url" content:"http://www.isteideopen.com"}
-    %meta{property:"og:image" content:"http://www.isteideopen.com/teide.jpg"}
-    %meta{property:"og:description" content:"Is Pico del Teide Cable Car Open?"}
-%
-    %meta{name:"twitter:card" content:"summary"}
-    %meta{name:"twitter:url" content:"http://www.isteideopen.com"}
-    %meta{name:"twitter:title" content:"Is Pico del Teide Cable Car Open?"}
-    %meta{name:"twitter:image" content:"http://www.isteideopen.com/teide.jpg"}
-    %meta{name:"twitter:description" content:"Is Pico del Teide Cable Car Open?"}
+    %meta{property:"og:title", content:"Is Pico del Teide Cable Car Open?"}
+    %meta{property:"og:url", content:"http://www.isteideopen.com"}
+    %meta{property:"og:image", content:"http://www.isteideopen.com/teide.jpg"}
+    %meta{property:"og:description", content:"Is Pico del Teide Cable Car Open?"}
+
+    %meta{name:"twitter:card", content:"summary"}
+    %meta{name:"twitter:url", content:"http://www.isteideopen.com"}
+    %meta{name:"twitter:title", content:"Is Pico del Teide Cable Car Open?"}
+    %meta{name:"twitter:image", content:"http://www.isteideopen.com/teide.jpg"}
+    %meta{name:"twitter:description", content:"Is Pico del Teide Cable Car Open?"}
 
   %body.index
     .o-app
