--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,7 @@
 %html.no-js.wf-karla-n4-active.wf-active
   %head
     %link{rel: "stylesheet", type:"text/css", href: url("/assets/stylesheets/base.css")}
-    %title= is_open ? "Is Pico del Teide Cable Car Open? YES it's OPEN!" : "Is Pico del Teide Cable Car Open? NO it's CLOSED!"
+    %title= is_open ? "YES it's OPEN! Is Pico del Teide Cable Car Open?" : "NO it's CLOSED! Is Pico del Teide Cable Car Open?"
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     %meta{charset: "utf-8"}
 
@@ -10,14 +10,14 @@
     %meta{name:"keywords", content: "pico, del, teide, cable, car, mointain, teneriffe"}
     %meta{name:"author", content: "Jan Kus"}
 
-    %meta{property:"og:title", content:"Is Pico del Teide Cable Car Open?"}
+    %meta{property:"og:title", content: is_open ? "YES! Pico del Teide Cable Car is Open!" : "NO! Pico del Teide Cable Car is closed :-("}
     %meta{property:"og:url", content:"http://www.isteideopen.com"}
     %meta{property:"og:image", content:"http://www.isteideopen.com/teide.jpg"}
     %meta{property:"og:description", content:"Is Pico del Teide Cable Car Open?"}
 
     %meta{name:"twitter:card", content:"summary"}
     %meta{name:"twitter:url", content:"http://www.isteideopen.com"}
-    %meta{name:"twitter:title", content:"Is Pico del Teide Cable Car Open?"}
+    %meta{name:"twitter:title", content:is_open ? "YES! Pico del Teide Cable Car is Open!" : "NO! Pico del Teide Cable Car is closed :-("}
     %meta{name:"twitter:image", content:"http://www.isteideopen.com/teide.jpg"}
     %meta{name:"twitter:description", content:"Is Pico del Teide Cable Car Open?"}
 
